unpackaged/main/default/objects/n2de__Distributor_category__c/n2de__Distributor_category__c.object-meta.xml
<CustomObject>
    <description>Distributor filters</description>
    <label>Distributor category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>