unpackaged/main/default/objects/n2de__Distributor_category__c/fields/n2de__Distributor__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor__c</fullName>
    <label>Distributor</label>
    <referenceTo>n2de__Distributor__c</referenceTo>
    <relationshipLabel>Distributor category</relationshipLabel>
    <relationshipName>Distributor_category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>