unpackaged/main/default/objects/n2de__Distributor_category__c/fields/n2de__Filter_comparison_argument_long__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_comparison_argument_long__c</fullName>
    <label>Filter comparison argument</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>