unpackaged/main/default/objects/n2de__Distributor_category__c/fields/n2de__Filter_comparison_operator__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_comparison_operator__c</fullName>
    <label>Filter comparison operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>