unpackaged/main/default/objects/n2de__Distributor_category__c/fields/n2de__Filter_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_field_name__c</fullName>
    <inlineHelpText>Object field, operator and comparison argument used to filter objects distributed from the queue by this distributor.</inlineHelpText>
    <label>Filter field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>