unpackaged/main/default/objects/n2de__Distributor_category__c/fields/n2de__Filter_field_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_field_type__c</fullName>
    <label>Filter field type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>