unpackaged/main/default/objects/n2de__Distributor_category__c/fields/n2de__Filter_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filter_sequence__c</fullName>
    <label>Filter sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>